// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test enhanceYaml() Create new ui5-mock.yaml based on ui5.yaml 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: dummy.application
type: application
server:
  customMiddleware:
    - name: first-middleware
      firstProp: firstValue
      nested:
        nestedPropA: nestedValueA # comment for nested value A
        list:
          - listValueA
          - listValueB
    - name: second-middleware
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: new/path/to/service
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;

exports[`Test enhanceYaml() Create new ui5-mock.yaml without app name in manifest.json 1`] = `
"# yaml-language-server: $schema=https://sap.github.io/ui5-tooling/schema/ui5.yaml.json

specVersion: \\"2.5\\"
metadata:
  name: ''
type: application
server:
  customMiddleware:
    - name: fiori-tools-proxy
      afterMiddleware: compression
      configuration:
        ignoreCertError: false # If set to true, certificate errors will be ignored. E.g. self-signed certificates will be accepted
        ui5:
          path:
            - /resources
            - /test-resources
          url: https://ui5.sap.com
    - name: fiori-tools-appreload
      afterMiddleware: compression
      configuration:
        port: 35729
        path: webapp
        delay: 300
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: /path/for/new/config
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
"
`;

exports[`Test enhanceYaml() Update old ui5-mock.yaml with given path 1`] = `
"specVersion: '2.0'
metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: path/to/service
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
    - name: middleware-after
"
`;

exports[`Test enhanceYaml() Update ui5-mock.yaml, path from manifest 1`] = `
"specVersion: '2.0'
metadata:
  name: 'app'
type: application
server:
  customMiddleware:
    - name: middleware-before
    - name: sap-fe-mockserver
      beforeMiddleware: csp
      configuration:
        mountPath: /
        services:
          - urlPath: ds/uri
            metadataPath: ./webapp/localService/metadata.xml
            mockdataPath: ./webapp/localService/data
            generateMockData: true
        annotations: []
    - name: middleware-after
"
`;
